<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_id"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/actionbar_menu"
        app:popupTheme="@style/MyDarkToolbarStyle"
        app:title="WebRTC Demo"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/telnyx_image_id"
        android:layout_width="188dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/spacing_large"
        android:src="@drawable/ic_telnyx_logo"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_id" />

    <TextView
        android:id="@+id/socket_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_medium"
        android:text="@string/socket"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/telnyx_image_id" />

    <TextView
        android:id="@+id/call_state_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/spacing_medium"
        android:text="@string/call_state"
        android:textColor="@color/black"
        android:textSize="@dimen/font_large"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/socket_text" />

    <TextView
        android:id="@+id/socket_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_tiny"
        android:paddingEnd="@dimen/spacing_medium"
        android:text="@string/disconnected"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/socket_text" />

    <TextView
        android:id="@+id/call_state_text_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_tiny"
        android:paddingEnd="@dimen/spacing_medium"
        android:text="@string/session_pending"
        android:textSize="@dimen/font_normal"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        app:layout_constraintStart_toEndOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/call_state_text" />

    <include
        android:id="@+id/login_section_id"
        layout="@layout/include_login_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" />

    <include
        android:id="@+id/call_control_section_id"
        layout="@layout/include_call_control_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" />

    <include
        android:id="@+id/incoming_call_section_id"
        layout="@layout/include_incoming_call_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" />

    <!-- <include
        android:id="@+id/ongoing_call_section_id"
        layout="@layout/include_ongoing_call_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value" /> -->

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_call_instance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/call_state_text_value"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/guideline_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/guideline_end" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="@dimen/guideline_bottom" />

</androidx.constraintlayout.widget.ConstraintLayout>